--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.body-container {
+  margin-top: 30px;
+}
+.media {
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.media:hover {
+  background-color: bisque;
+}
+.media h5 {
+  font-size: 16px;
+  padding-left: 15px;
+}
+
+.navbar {
+  margin-bottom: 20px;
+}
